# xai_modells_methods

./: .gitignore  README.rst  model.pkl  pyproject.toml  stuff.ipynb  test_data.csv  train_data.csv  x_trainings_daten_stuttart.csv  y_trainings_daten_stuttart.csv
ba_xai/: app.py  app_instance.py
ba_xai/backend/models/: __init__.py  base_model.py  gam.py  gpr.py  lgbm.py  linear_regression.py  mlp.py  models_config.py  transformer.py  xgboost.py
ba_xai/components/: data_upload.py  feature_selection_modal.py  model_config_selection.py  model_parameters.py  model_paramters_selection.py  model_performance.py  model_selection.py  xai_methods.py
ba_xai/configs/: models_config.py  shap_config.py  xai_methods_config.py
ba_xai/temp/: model.pkl  prediction.csv  processed_test_data.csv  test_data.csv  train_data.csv
notebooks and datasets/: Gaussian Process Regression.ipynb  MLP.ipynb  generell_code_snippets.ipynb  test_data_2023.csv  train_test_data_till_2023.csv
sonstiges/: Gaussian Process Regression.ipynb  MLP.ipynb  analyse.ipynb  lgbm_config.json  prediction (1).csv  prediction.csv  stuff.ipynb  train_data.csv  train_data_till_2023_last_2_years.csv  train_data_till_2023_last_year.csv  train_data_till_2023_preprocessed.csv  trainings_daten_pizzahut_Garmisch_Partenkirchen_Marienplatz.csv  trainings_daten_stuttart.csv  x_trainings_daten_pizzahut_Garmisch_Partenkirchen_Marienplatz.csv  x_trainings_daten_stuttart_neu.csv  xgb_config.json  y_trainings_daten_pizzahut_Garmisch_Partenkirchen_Marienplatz.csv  y_trainings_daten_stuttart_neu.csv
tests/: test_ba_xai.py
(+19 files in other folders)
