[tool.poetry]
name = "BA_XAI"
version = "0.1.0"
description = ""
authors = ["tc <tcinhoff@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
pandas = "^2.1.3"
lightgbm = "^4.1.0"
shap = "^0.43.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
