[tool.poetry]
name = "BA_XAI"
version = "0.1.0"
description = ""
authors = ["tc <tcinhoff@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
pandas = "^2.1.3"
lightgbm = "^4.1.0"
shap = "^0.43.0"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"
lime = "^0.2.0"
dash-bootstrap-components = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
